helm/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meteo-alerts-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meteo-alerts-server
  template:
    metadata:
      labels:
        app: meteo-alerts-server
    spec:
      containers:
      - name: meteo-alerts-server
        image: syntiab/meteo-alerts-server
        ports:
        - containerPort: 4000

---

apiVersion: v1
kind: Service
metadata:
  name: meteo-alerts-server-service
spec:
  type: LoadBalancer
  selector:
    app: meteo-alerts-server
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
