helm/client-deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meteo-alerts-client
spec:
  rules:
  - host: meteoalerts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: meteo-alerts-client
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: meteo-alerts-server
            port: 
              number: 80
